--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "jsdom": "^26.0.0",
     "playwright": "^1.49.1",
     "vite": "6.0.9",
-    "vitest": "^2.1.8"
+    "vitest": "2.1.9"
   }
 }
